--- a/src/app/alino-app/components/navbar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/navbar/list-card/ListCard.module.css
@@ -1,15 +1,13 @@
 .container {
-  /* ex subjectsCardsContainer*/
   position: relative;
   overflow: hidden;
-  /* background-color: rgb(250, 250, 250); */
   border-radius: 15px;
   height: 45px;
   width: 100%;
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 7px 40px 7px 10px;
+  padding: 7px 10px 7px 10px;
   gap: 5px;
   transition:
     background-color 0.2s ease-in-out,
@@ -31,131 +29,137 @@
   z-index: 0;
 }
 
-.colorPickerMotion {
+.colorPickerContainer {
   position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
   gap: 3px;
   height: 100%;
 }
 
+.textContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  overflow: hidden;
+}
+
 .listName {
-  /* ex subjectName */
   font-size: 14px;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.nameChangerContainer {
-  display: flex;
+  padding-left: 5px;
 }
 
 .nameChangerInput {
   width: 100%;
+  height: 100%;
   border: none;
   color: #1c1c1c;
   outline: none;
+  background-color: transparent;
   font-size: 14px;
-  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  padding-left: 5px;
 }
 
-.button {
-  position: absolute;
-  right: 10px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  background-color: transparent;
-  transition: opacity 0.2s ease-in-out;
-  z-index: 1;
+.listManagerContainer {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5px;
+  width: fit-content;
+  height: 100%;
+}
+
+.pinContainer {
+  width: 14px;
+  height: 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkButton {
+  position: relative;
+  width: 23px;
+  height: 23px;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 2px;
+}
+
+.configsContainer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 23px;
+  height: 23px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 5px;
+}
+
+.configButtonContainer {
+  position: absolute;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  transition: opacity 0.2s ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
 }
 
 .counter {
   position: absolute;
-  right: 10px;
-  background-color: transparent;
   transition: opacity 0.2s ease-in-out;
   width: 23px;
   height: 23px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 0;
   color: rgb(210, 210, 210);
-  font-size: 12px;
-  border-radius: 5px;
-  background-color: rgb(250, 250, 250);
+  font-size: 14px;
 }
 
-.containerButtonsMobile {
-  position: absolute;
-  right: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  height: fit-content;
-  gap: 5px;
-}
-
-.buttonMobile {
+.configButtonContainerMobile {
   position: relative;
   border: none;
-  border-radius: 10px;
   cursor: pointer;
   background-color: transparent;
   transition: opacity 0.2s ease-in-out;
-  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .counterMobile {
   position: relative;
-  background-color: transparent;
   transition: opacity 0.2s ease-in-out;
   width: 23px;
   height: 23px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 0;
   color: rgb(210, 210, 210);
-  font-size: 12px;
-  border-radius: 5px;
-  background-color: rgb(250, 250, 250);
-}
-
-.checkButton {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: 10px;
-  border: none;
-  background-color: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.2s ease-in-out;
-}
-
-.pinContainer {
-  position: absolute;
-  width: 23px;
-  height: 23px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size: 14px;
 }
