--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
   max-width: 100vw;
   height: 100%;
   font-family: var(--font-inter), sans-serif;
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
 }
 
 a {
