--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -90,6 +90,13 @@
 }
 
 /* //////////////// */
+.listContainer {
+  width: 100%;
+  z-index: 25;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
 
 .titleSection {
   display: flex;
@@ -98,13 +105,19 @@
   flex-direction: row;
   gap: 5px;
   width: 100%;
-  z-index: 25;
 }
 
 .listTitle {
   color: #1c1c1c;
   font-size: 20px;
   font-weight: 600;
+}
+
+.listSubtitle {
+  font-size: 14px;
+  color: rgb(200, 200, 200);
+  user-select: none;
+  text-align: start;
 }
 
 .inputSection {
