--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -1,36 +1,86 @@
 .cardContainer {
+  position: relative;
   width: 100%;
   background-color: #fff;
   height: fit-content;
   border-radius: 15px;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
-  padding: 10px 15px 10px 15px;
+  padding: 5px 15px 5px 15px;
   gap: 15px;
 }
 
-.leftContainer {
+.textContainer {
+  width: 100%;
+  height: 100%;
+  min-height: 30px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.nameChangerInput {
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  background-color: rgb(245, 245, 245);
+  padding: 5px 10px;
+  font-size: 16px;
+  width: 100%;
+  resize: none;
+  overflow-y: hidden;
+  white-space: pre-wrap;
+  word-break: break-word;
+  height: auto;
+
+  /* Nuevos ajustes */
+  box-sizing: border-box; /* Incluye padding en la altura total */
+}
+
+.text {
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  text-wrap: wrap;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+  font-size: 16px;
+}
+
+.editingButtons {
+  position: relative;
+  width: 30px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
-  overflow: hidden;
-  word-break: break-word;
+}
+
+.checkButton {
+  position: relative;
+  width: 100%;
+  height: auto;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 2px;
 }
 
 .deleteButton {
+  position: relative;
+  width: 70%;
+  height: auto;
   display: flex;
-  width: fit-content;
   height: fit-content;
   background-color: transparent;
   border: none;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
-}
-
-.text {
-  position: relative;
-  margin: 0;
-  padding: 0;
 }
