--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -8,7 +8,7 @@
   justify-content: start;
   align-items: center;
   padding: 5px 15px 5px 15px;
-  gap: 15px;
+  gap: 5px;
 }
 
 .textContainer {
@@ -53,7 +53,7 @@
 
 .editingButtons {
   position: relative;
-  width: 30px;
+  width: fit-content;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -83,4 +83,29 @@
   border: none;
   cursor: pointer;
   transition: opacity 0.2s ease-in-out;
+}
+
+.configTaskSection {
+  position: relative;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.timeTargetContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px;
+  height: 25px;
+  background-color: rgb(250, 250, 250);
+  border-radius: 5px;
+  width: fit-content;
+  text-wrap: nowrap;
+}
+
+.timeTargetContainer p {
+  font-size: 14px;
 }
