--- a/src/components/ui/calendar/Calendar.module.css
+++ b/src/components/ui/calendar/Calendar.module.css
@@ -1,14 +1,28 @@
 .button {
+  position: relative;
   border-radius: 5px;
   border: none;
   background-color: rgb(250, 250, 250);
   padding: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .button:hover {
   background-color: rgb(240, 240, 240) !important;
+}
+
+.notification {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #87189d;
+  border: solid 3px #fff;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .container {
@@ -16,24 +30,133 @@
   background-color: #ffffff;
   border: 1px solid rgb(240, 240, 240);
   width: fit-content;
+  width: 252px;
   min-height: fit-content;
   border-radius: 15px;
   display: inline-flex;
   flex-direction: column;
-  gap: 10px;
-  padding: 10px;
+  gap: 0px;
+  padding: 5px;
   z-index: 100;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
 .optionsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 10px;
   width: 100%;
   height: 100%;
   flex-direction: column;
+  padding: 10px 15px 5px 15px;
+}
+
+.title {
+  width: 100%;
+  text-wrap: wrap;
+  color: #1c1c1c;
+  font-weight: 600;
+  font-size: 14px;
+  padding: 5px 15px 10px 15px;
+  text-align: left;
+}
+
+.divisor {
+  width: 100%;
+  height: 1px;
+  background-color: #f0f0f0;
+}
+
+.hourPicker {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.hourParaph {
+  color: #8a8a8a;
+  font-size: 12px;
+}
+
+.hourButtonsContainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  padding-top: 5px;
+}
+
+.hourButtons {
+  border: none;
+  background-color: rgb(240, 240, 240);
+  color: #1c1c1c;
+  font-size: 14px;
+  width: 100%;
+  padding: 8px 0px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.hourButtons:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+.hourButtonOmit {
+  border: none;
+  background-color: transparent;
+  color: #1c1c1c;
+  text-decoration: underline;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.hourButtonOmit:hover {
+  color: #87189d;
+}
+
+.limitDateContainer {
+  width: 100%;
+  height: fit-content;
+  font-size: 12px;
+  text-align: center;
+  color: #8a8a8a;
+}
+
+.supporButtons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.supporButtons button {
+  background-color: rgb(245, 245, 245);
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 15px;
+  border: solid 1px rgb(235, 235, 235);
+  font-size: 11px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  color: #1c1c1c;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.supporButtons button:hover {
+  background-color: rgb(235, 235, 235);
 }
