--- a/src/components/ui/calendar/DayPicker.css
+++ b/src/components/ui/calendar/DayPicker.css
@@ -5,7 +5,7 @@
   --rdp-day-height: 30px; /* The height of the day cells. */
   --rdp-day-width: 30px; /* The width of the day cells. */
 
-  --rdp-day_button-border-radius: 100%; /* The border radius of the day cells. */
+  --rdp-day_button-border-radius: 10px; /* The border radius of the day cells. */
   --rdp-day_button-border: 2px solid transparent; /* The border of the day cells. */
   --rdp-day_button-height: 30px; /* The height of the day cells. */
   --rdp-day_button-width: 30px; /* The width of the day cells. */
@@ -22,9 +22,9 @@
   --rdp-months-gap: 2rem; /* The gap between the months in the multi-month view. */
 
   --rdp-nav_button-disabled-opacity: 0.5; /* The opacity of the disabled navigation buttons. */
-  --rdp-nav_button-height: 2.25rem; /* The height of the navigation buttons. */
-  --rdp-nav_button-width: 2.25rem; /* The width of the navigation buttons. */
-  --rdp-nav-height: 2.75rem; /* The height of the navigation bar. */
+  --rdp-nav_button-height: 2rem; /* The height of the navigation buttons. */
+  --rdp-nav_button-width: 2rem; /* The width of the navigation buttons. */
+  --rdp-nav-height: 2rem; /* The height of the navigation bar. */
 
   --rdp-range_middle-background-color: var(
     --rdp-accent-background-color
@@ -92,6 +92,7 @@
   width: var(--rdp-day-width);
   height: var(--rdp-day-height);
   text-align: center;
+  color: #1c1c1c;
 }
 
 .rdp-day_button {
@@ -105,6 +106,8 @@
   align-items: center;
   display: flex;
 
+  -webkit-tap-highlight-color: transparent;
+
   width: var(--rdp-day_button-width);
   height: var(--rdp-day_button-height);
   border: var(--rdp-day_button-border);
@@ -117,6 +120,7 @@
 
 .rdp-caption_label {
   z-index: 1;
+  color: #1c1c1c;
 
   position: relative;
   display: inline-flex;
@@ -148,6 +152,11 @@
   position: relative;
   appearance: none;
 
+  background-color: rgb(245, 245, 245);
+  border-radius: 10px;
+
+  -webkit-tap-highlight-color: transparent;
+
   width: var(--rdp-nav_button-width);
   height: var(--rdp-nav_button-height);
 }
@@ -162,6 +171,8 @@
 .rdp-chevron {
   display: inline-block;
   fill: var(--rdp-accent-color);
+  width: 20px;
+  height: auto;
 }
 
 .rdp-root[dir="rtl"] .rdp-nav .rdp-chevron {
@@ -210,9 +221,10 @@
 .rdp-month_caption {
   display: flex;
   align-content: center;
+  justify-content: center;
   height: var(--rdp-nav-height);
   font-weight: bold;
-  font-size: large;
+  font-size: 16px;
 }
 
 .rdp-months {
@@ -234,8 +246,10 @@
 
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   height: var(--rdp-nav-height);
+  width: 100%;
 }
 
 .rdp-weekday {
