--- a/src/components/ui/config-menu/ConfigMenu.module.css
+++ b/src/components/ui/config-menu/ConfigMenu.module.css
@@ -6,8 +6,8 @@
 }
 
 .mainButton {
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgb(250, 250, 250);
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -51,11 +52,13 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
 .separator {
   width: 100%;
   height: 1px;
   background-color: rgb(240, 240, 240);
 }
+
 .optionsContainer {
   display: flex;
   justify-content: center;
