--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -46,6 +46,7 @@
   align-items: center;
   max-width: 600px;
   z-index: 26;
+  height: 75px;
 }
 
 .homeSubContainer {
@@ -96,7 +97,9 @@
   z-index: 25;
   display: flex;
   flex-direction: column;
+  justify-content: end;
   gap: 5px;
+  height: 75px;
 }
 
 .titleSection {
