--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -23,11 +23,11 @@
   height: fit-content;
   display: flex;
   justify-content: start;
-  align-items: center;
+  align-items: start;
   border-radius: 15px;
   background-color: #ffffff;
   /* overflow: hidden; */
-  padding: 0px 15px 0px 15px;
+  padding: 0px 15px 0px 10px;
   box-shadow:
     0 4px 12px #0c144205,
     0 30px 80px #0c144214,
@@ -57,10 +57,9 @@
   color: #1c1c1c;
   resize: none;
   overflow: hidden;
-  /* white-space: pre-wrap; */
-  /* word-break: break-word; */
-  /* box-sizing: border-box; */
-  /* background-color: yellow; */
+  white-space: pre-wrap;
+  word-break: break-word;
+  box-sizing: border-box;
   padding: 5px 10px;
   width: 100%;
   height: 100%;
@@ -71,7 +70,7 @@
 
   appearance: none;
   -webkit-tap-highlight-color: transparent;
-  /* background-color: yellow; */
+  background-color: transparent;
 }
 
 .limitIndicator {
@@ -120,4 +119,5 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
+  margin-top: 10px;
 }
