--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -6,9 +6,15 @@
   border-radius: 15px;
   display: flex;
   justify-content: start;
-  align-items: center;
+  align-items: start;
   padding: 5px 15px 5px 15px;
   gap: 5px;
+}
+
+.checkboxContainer {
+  height: 30px;
+  display: flex;
+  align-items: center;
 }
 
 .textContainer {
@@ -52,7 +58,7 @@
 .editingButtons {
   position: relative;
   width: fit-content;
-  height: 100%;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -90,20 +96,4 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
-}
-
-.timeTargetContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 10px;
-  height: 25px;
-  background-color: rgb(250, 250, 250);
-  border-radius: 5px;
-  width: fit-content;
-  text-wrap: nowrap;
-}
-
-.timeTargetContainer p {
-  font-size: 14px;
 }
