--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -104,7 +104,7 @@
   border: none;
   outline: none;
   background-color: transparent;
-  width: 30px;
+  width: fit-content;
   height: 30px;
   border-radius: 5px;
   cursor: pointer;
@@ -118,6 +118,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
   margin-top: 10px;
 }
