--- a/src/components/ui/color-picker/ColorPicker.module.css
+++ b/src/components/ui/color-picker/ColorPicker.module.css
@@ -52,8 +52,8 @@
   border: 1px solid rgb(240, 240, 240);
   border-radius: 15px;
   flex-direction: column;
-  gap: 12px;
-  padding: 15px 5px 15px 5px;
+  gap: 10px;
+  padding: 10px 5px 10px 5px;
   z-index: 100;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -65,13 +65,24 @@
 .titleSection {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  padding: 0px 5px;
 }
 
 .titleButtons {
+  position: relative;
   display: flex;
-  gap: 5px;
-  padding: 0px 15px;
+  padding: 5px 5px;
+  border: 1px solid rgb(250, 250, 250);
+  border-radius: 10px;
+}
+
+.titleSelector {
+  background-color: rgb(245, 245, 245);
+  z-index: -1;
+  height: 25px;
+  width: 115.5px;
+  position: absolute;
+  border-radius: 5px;
 }
 
 .title {
@@ -84,15 +95,14 @@
   cursor: pointer;
   padding: 5px 10px 5px 10px;
   border-radius: 5px;
-  transition:
-    box-shadow 0.2s ease-in-out,
-    color 0.2s ease-in-out;
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .separator {
   width: 100%;
   height: 1px;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(245, 245, 245);
 }
 
 .colorSelectorContainer {
@@ -101,14 +111,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: fit-content;
+  height: 100%;
   padding: 0px 15px;
-  gap: 16px;
+  gap: 10px;
 }
 
 .buttonSection {
   position: relative;
   height: 100%;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(6, minmax(0px, 1fr));
 }
@@ -117,8 +128,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
 }
 
 .button {
@@ -140,12 +151,14 @@
   width: 100%;
   justify-content: space-around;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 .hexContainer {
   display: flex;
   align-items: center;
-  gap: 5px;
+  justify-content: center;
+  gap: 10px;
 }
 
 .inputColorContainer {
@@ -185,16 +198,19 @@
   padding: 0;
   margin: 0;
 }
+
 .inputColor::-webkit-color-swatch-wrapper {
   border: none;
   padding: 0;
   margin: 0;
 }
+
 .inputColor::-moz-color-swatch-wrapper {
   border: none;
   padding: 0;
   margin: 0;
 }
+
 .inputColor::-moz-color-swatch {
   border-radius: 7px;
   border: none;
@@ -211,16 +227,20 @@
   outline-style: none;
   color: #1c1c1c;
   font-weight: 500;
+  background-color: rgb(245, 245, 245);
+  border-radius: 5px;
+  padding: 5px 10px;
 }
 
 .copyButton {
   background-color: transparent;
   border: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .pickerEmojiContainer {
   width: 100%;
-  padding: 0px 15px 0px 15px;
   overflow: hidden;
+  padding: 0px 15px;
 }
