--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -38,6 +38,16 @@
   z-index: 25;
 }
 
+.header {
+  position: relative;
+  width: 100%;
+  z-index: 26;
+  max-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* ///////HOME////// */
 
 .homeContainer {
@@ -46,8 +56,6 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  max-width: 600px;
-  z-index: 26;
   height: 75px;
 }
 
@@ -94,9 +102,16 @@
 }
 
 /* //////////////// */
+.configSection {
+  width: 50px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
 .listContainer {
   width: 100%;
-  z-index: 25;
   display: flex;
   flex-direction: column;
   justify-content: end;
@@ -111,6 +126,8 @@
   flex-direction: row;
   gap: 5px;
   width: 100%;
+  max-width: 450px;
+  height: 30px;
 }
 
 .listTitle {
@@ -124,6 +141,7 @@
   color: rgb(200, 200, 200);
   user-select: none;
   text-align: start;
+  padding-left: 5px;
 }
 
 .inputSection {
