--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
   font-family: var(--font-inter), sans-serif;
   /* background-color: #f0f0f0; */
   perspective: 1000px;
+  overflow: hidden !important;
 }
 
 a {
