--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -83,7 +83,9 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 5px 10px;
+  padding: 5px 20px;
+  min-height: 0px;
+  margin-top: 10px;
 }
 
 .limitIndicator {
