--- a/src/app/alino-app/components/todo/HomeDashboard/HomeDashboard.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/HomeDashboard.module.css
@@ -104,7 +104,7 @@
 
 .homeTitle {
   position: relative;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 900;
   background: -webkit-linear-gradient(
     45deg,
@@ -124,7 +124,7 @@
   max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-wrap: nowrap;
+  text-wrap: wrap;
 }
 
 .homeTimeContainer {
