--- a/src/app/alino-app/components/todo/HomeDashboard/parts/Pomodoro/PomodoroConfig.module.css
+++ b/src/app/alino-app/components/todo/HomeDashboard/parts/Pomodoro/PomodoroConfig.module.css
@@ -1,7 +1,7 @@
 .pomoBody {
   padding: 20px;
   max-width: 700px;
-  width: 100%;
+  width: 450px;
   display: flex;
   flex-direction: column;
   gap: 20px;
