--- a/src/components/ui/PomodoroMiniIndicator/PomodoroMiniIndicator.module.css
+++ b/src/components/ui/PomodoroMiniIndicator/PomodoroMiniIndicator.module.css
@@ -1,8 +1,8 @@
 /* Container principal */
 .container {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: calc(env(safe-area-inset-bottom) + 15px);
+  right: 15px;
   z-index: 1000;
   cursor: pointer;
   transition: transform 0.3s ease;
