--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,11 @@
   /* will-change: transform; */
 }
 
+.react-grid-item:has(.dragHandle:active) > .react-resizable-handle {
+  opacity: 0 !important;
+  transform: scale(0);
+}
+
 .react-grid-item:hover > .react-resizable-handle {
   opacity: 1;
 }
@@ -31,7 +36,9 @@
   pointer-events: auto;
   background-image: none;
   opacity: 0;
-  transition: opacity 0.2s ease-in-out;
+  transition:
+    opacity 0.2s ease-in-out,
+    transform 0.2s ease-in-out;
   width: 35px;
   height: 35px;
 }
