--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 .react-grid-item:has(.dragHandle:active) > .react-resizable-handle {
   opacity: 0 !important;
   transform: scale(0);
+  z-index: +1;
 }
 
 .react-grid-item:hover > .react-resizable-handle {
